less/base/layout/tablayout.less
/*
 * Copyright (c) 2014-2015, Wanadev <http://www.wanadev.fr/>
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *
 *   * Redistributions of source code must retain the above copyright notice, this
 *     list of conditions and the following disclaimer.
 *   * Redistributions in binary form must reproduce the above copyright notice,
 *     this list of conditions and the following disclaimer in the documentation
 *     and/or other materials provided with the distribution.
 *   * Neither the name of Wanadev nor the names of its contributors may be used
 *     to endorse or promote products derived from this software without specific
 *     prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
 * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 * DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
 * FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
 * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
 * SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
 * CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 * OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 *
 * Authored by: Fabien LOISON <https://github.com/flozz>
 */


.photonui-tablayout {

    display: inline-block;
    height: 100%;
    box-sizing: border-box;

    .photonui-tablayout-innerbox {

        display: flex;
        flex-wrap: nowrap;
        width: 100%;
        height: 100%;

        .photonui-tablayout-tabs {

            display: flex;
            box-sizing: border-box;

            .photonui-tabitem-tab {
                box-sizing: border-box;
                min-width: 10px;
                max-width: 150px;
                overflow: hidden;
                text-overflow: ellipsis;
                white-space: nowrap;
                -wibkit-user-select: none;
                -moz-user-select: none;
                user-select: none;
            }
        }

        .photonui-tablayout-content {
            box-sizing: border-box;
            min-height: 20px;
            min-width: 20px;
            flex-grow: 1;

            > * {
                height: 100%;
                width: 100%;
            }
        }

    }

    &.photonui-tablayout-tabposition-top > .photonui-tablayout-innerbox {
        flex-direction: column;

        > .photonui-tablayout-tabs {
            flex-direction: row;
        }
    }

    &.photonui-tablayout-tabposition-bottom > .photonui-tablayout-innerbox {
        flex-direction: column-reverse;

        > .photonui-tablayout-tabs {
            flex-direction: row;
        }
    }

    &.photonui-tablayout-tabposition-left > .photonui-tablayout-innerbox {
        flex-direction: row;

        > .photonui-tablayout-tabs {
            flex-direction: column;
        }
    }

    &.photonui-tablayout-tabposition-right > .photonui-tablayout-innerbox {
        flex-direction: row-reverse;

        > .photonui-tablayout-tabs {
            flex-direction: column;
        }
    }
}

